# vite-plugin-excel-to-i18n

./: .npmignore  README.md  Taskfile.yml  package-lock.json  package.json  tsconfig-cjs.json  tsconfig.json
.task/checksum/: build-wasm
example/: .gitignore  README.md  index.html  language.csv  language.xlsx  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  ~$language.xlsx
example/src/: App.css  App.tsx  index.css  main.tsx
example/src/components/: ButtonExample.css  ButtonExample.tsx  LabelExample.tsx
example/src/i18n/: i18n.ts
example/src/i18n/locales/: en.json  jp.json  ko.json  translation.en.json  translation.ja.json  translation.jp.json  translation.ko.json
scripts/: check-wasm.js  copy-wasm-to-lib.js  copy-wasm.js  create-wasm-wrapper.js
src/: csv-to-i18n-json.ts  excel-to-i18n-json-wasm.ts  excel-to-i18n-json.ts  index.ts  wasm-utils.ts
src/lib/: excel_to_i18n_wasm.d.ts  excel_to_i18n_wasm.js  excel_to_i18n_wasm_bg.wasm  excel_to_i18n_wasm_bg.wasm.d.ts  index.js  package.json  vite-plugin.js
src/utils/: i18n-utils.ts
src/wasm/: .gitignore  Cargo.toml  README.md  build.js  lib.rs  test.js
src/wasm/src/: lib.rs
test/: node-debug.js
wasm/: .gitignore  Cargo.toml
wasm/src/: lib.rs
