[package]
name = "excel-to-i18n-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Gyuha <nicegyuha@gmail.com>"]
description = "WebAssembly module for converting Excel files to i18n JSON"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
calamine = "0.19.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.0"
web-sys = { version = "0.3.64", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
opt-level = 3
lto = true 