[package]
name = "excel-to-i18n"
version = "0.1.0"
edition = "2021"
authors = ["Gyuha <nicegyuha@gmail.com>"]
description = "Excel to i18n converter for WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]
path = "lib.rs"

[dependencies]
wasm-bindgen = "0.2.89"
js-sys = "0.3.66"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
calamine = "0.18.0"
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = 3
lto = true