[package]
name = "excel-to-i18n-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly implementation of Excel to i18n JSON converter"
authors = ["Gyuha <nicegyuha@gmail.com>"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.89"
js-sys = "0.3.66"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde-wasm-bindgen = "0.6.3"
calamine = "0.19.1"
wasm-bindgen-futures = "0.4.39"
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.39"

[profile.release]
opt-level = 3
lto = true
